--- a/Serveses.html
+++ b/Serveses.html
@@ -9,7 +9,7 @@
         <h1>Pinkish Services</h1><br>
         <div class="conatiner">
             <div class="box">
-                <img src="ping.jpg" alt="">
+                <img src="image/ping.jpg" alt="">
                 <h1>Ping Pong Room</Area></h1>
                 <p>60 EL for a group per hour</p><br>
                 
