--- a/home_page.html
+++ b/home_page.html
@@ -64,7 +64,7 @@
     }
     
     nav {
-        padding: 50, 0, 0, 0;
+        padding: 50px, 0, 0, 0;
     }
     
     a:hover {
@@ -102,6 +102,10 @@
 <body>
 
 
+    <div>
+        <img src="./image/logo1-01.png" alt="Pinkish" width="100" height="100">
+    </div>
+
     <nav>
         <a class="activee" href="home_page.html">Home</a>
         <a href="Serveses.html">Our Services</a>
@@ -109,8 +113,9 @@
 
 
     </nav>
-    <div class="home">
 
+
+    <div class="home">
         <img src="./image/logo_word.png" alt="Pinkish" width="350" height="350">
         <h2>Just A Girl Boss Building Her Empire</h2>
     </div>
