--- a/about.html
+++ b/about.html
@@ -5,6 +5,16 @@
     <title>About Info</title>
 </head>
 <body>
-    hi here
+    <div class=" conatiner">
+        <h1>Pinkish</h1>
+        <h2>Just a girl boss building her empire
+        </h2>
+        <div class="im">
+            <img src="./image/logo1-01.png" alt="Photograph">
+    
+        </div>
+        <p>Place to serve girls and give every girl hir comfort.</p><br>
+        <p>if you need a pink place to feel free of responspliti and take your time picifuly.. here your place</p>
+    </div>
 </body>
 </html>
