--- a/about.html
+++ b/about.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html >
 <head>
     <link rel="Stylesheet" href="Css/Style_Info.css">
     <title>About Info</title>
@@ -10,7 +10,7 @@
         <h2>Just a girl boss building her empire
         </h2>
         <div class="im">
-            <img src="./image/logo1-01.png" alt="Photograph">
+            <img src="./image/logo1-01.png" width="500px" height="500px">
     
         </div>
         <p>Place to serve girls and give every girl hir comfort.</p><br>
