--- a/about.html
+++ b/about.html
@@ -10,11 +10,12 @@
         <h2>Just a girl boss building her empire
         </h2>
         <div class="im">
-            <img src="./image/logo1-01.png" width="500px" height="500px">
+            <img src="./image/logo1-01.png" width="400px" height="250px">
     
         </div>
-        <p>Place to serve girls and give every girl hir comfort.</p><br>
-        <p>if you need a pink place to feel free of responspliti and take your time picifuly.. here your place</p>
+        <p>Place to serve girls and give every girl hir comfort.
+            if you need a pink place to feel free of responspliti and take your time picifuly, so
+             here your place</p>
     </div>
 </body>
 </html>
