--- a/about.html
+++ b/about.html
@@ -5,6 +5,14 @@
     <title>About Info</title>
 </head>
 <body>
+    <nav>
+        <a class="activee" href="home_page.html">Home</a>
+        <a href="Serveses.html">Our Services</a>
+        <a href="about.html">About</a>
+
+
+    </nav>
+<br><br>
     <div class="conatiner">
         <h1>Pinkish</h1>
         <h2>Just a girl boss building her empire
