--- a/Serveses.html
+++ b/Serveses.html
@@ -5,6 +5,14 @@
     <link rel="Stylesheet" href="Css/Style.css">
 </head>
 <body>
+    <!-- <nav>
+        <a class="activee" href="home_page.html">Home</a>
+        <a href="Serveses.html">Our Services</a>
+        <a href="about.html">About</a>
+
+
+    </nav> -->
+    <br><br>
     <div class = "wrapper">
         <h1>Pinkish Services</h1><br>
         <div class="conatiner">
