--- a/about.html
+++ b/about.html
@@ -6,9 +6,9 @@
 </head>
 <body>
     <nav>
-        <a class="activee" href="home_page.html">Home</a>
+        <a  href="home_page.html">Home</a>
         <a href="Serveses.html">Our Services</a>
-        <a href="about.html">About</a>
+        <a class="activee" href="about.html">About</a>
 
 
     </nav>
