--- a/Serveses.html
+++ b/Serveses.html
@@ -1,19 +1,18 @@
 <!DOCTYPE html>
-<html lang="en">
+<html >
 <head>
     <title>Services - Pinkish</title>
     <link rel="Stylesheet" href="Css/Style.css">
 </head>
 <body>
-    <!-- <nav>
+    <nav>
         <a class="activee" href="home_page.html">Home</a>
         <a href="Serveses.html">Our Services</a>
         <a href="about.html">About</a>
-
-
-    </nav> -->
+    </nav>
     <br><br>
     <div class = "wrapper">
+
         <h1>Pinkish Services</h1><br>
         <div class="conatiner">
             <div class="box">
