--- a/about.html
+++ b/about.html
@@ -1,29 +1,32 @@
 <!DOCTYPE html>
-<html >
+<html>
+
 <head>
-    <link rel="Stylesheet" href="Css/Style_Info.css">
+    <link rel="Stylesheet" href="Css/about_style.css">
     <title>About Info</title>
 </head>
+
 <body>
+    <div class="header">
+        <img src="image/logo1-01.png" alt="logo" />
+    </div>
+    <br>
     <nav>
-        <a  href="home_page.html">Home</a>
-        <a href="Serveses.html">Our Services</a>
+        <a href="home_page2.html">Home</a>
+        <a href="Services.html">Our Services</a>
         <a class="activee" href="about.html">About</a>
-
-
     </nav>
-<br><br>
+    <br><br><br><br>
     <div class="conatiner">
         <h1>Pinkish</h1>
         <h2>Just a girl boss building her empire
         </h2>
         <div class="im">
             <img src="./image/logo1-01.png" width="400px" height="250px">
-    
+
         </div>
-        <p>Place to serve girls and give every girl hir comfort.
-            if you need a pink place to feel free of responspliti and take your time picifuly, so
-             here your place</p>
+        <p>Place to serve girls and give every girl hir comfort. if you need a pink place to feel free of responspliti and take your time picifuly, so here your place</p>
     </div>
 </body>
+
 </html>
