--- a/Services.html
+++ b/Services.html
@@ -13,7 +13,7 @@
     </div>
     <br><br>
     <nav>
-        <a href="home_page2.html">Home</a>
+        <a href="home_page.html">Home</a>
         <a class="activee" href="Services.html">Our Services</a>
         <a href="about.html">About</a>
     </nav>
