--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
     </div>
     <br>
     <nav>
-        <a href="home_page2.html">Home</a>
+        <a href="home_page.html">Home</a>
         <a href="Services.html">Our Services</a>
         <a class="activee" href="about.html">About</a>
     </nav>
