--- a/home_page.html
+++ b/home_page.html
@@ -2,25 +2,22 @@
 
 <head>
     <title>Home Page</title>
-    <link rel="stylesheet" href="./Css/Style_home.css">
+    <link rel="stylesheet" href="./Css/home_page_style.css">
 </head>
 
 
 <body>
 
-
-    <div>
-        <img src="./image/logo1-01.png" alt="Pinkish" width="320" height="200">
+    <div class="header">
+        <img src="image/logo1-01.png" alt="logo" />
     </div>
-
     <nav>
         <a class="activee" href="home_page.html">Home</a>
-        <a href="Serveses.html">Our Services</a>
+        <a href="Services.html">Our Services</a>
         <a href="about.html">About</a>
 
 
     </nav>
-
 
     <div class="home">
         <img src="./image/logo_word.png" alt="Pinkish" width="640" height="400">
