--- a/Services.html
+++ b/Services.html
@@ -21,55 +21,84 @@
     <div class="wrapper">
 
 
-        <div class="conatiner">
-            <div class="box" onclick="location.href='https://docs.google.com/forms/d/e/1FAIpQLSddfcUa43gB-k4XjpwFVotdnirQJL8UpPvfq9f4h-SBhjwqFg/viewform?usp=sf_link';">
-                <img src=" image/ping.jpg " alt=" ">
-                <h1>Ping Pong Room</Area>
-                </h1>
-                <p>60 EL for a group per hour</p><br>
+        <div class="conatiner" onclick="window.open( 'https://docs.google.com/forms/d/e/1FAIpQLSddfcUa43gB-k4XjpwFVotdnirQJL8UpPvfq9f4h-SBhjwqFg/viewform?usp=sf_link');">
 
-            </div>
-            <div class="box " onclick="location.href='https://docs.google.com/forms/d/e/1FAIpQLSddfcUa43gB-k4XjpwFVotdnirQJL8UpPvfq9f4h-SBhjwqFg/viewform?usp=sf_link';">
-                <img src="image/playstation.jpg " alt=" ">
+
+            <div class="box">
+                <img src="image/playstation.jpg " alt="">
                 <h1>Playstation Room</h1>
                 <p>20 EL for one person per hour</p><br>
 
             </div>
+            <div class="box">
+                <img src="image/ping.jpg " alt="">
+                <h1>Playstation Room</h1>
+                <p>60 EL for a group per hour</p><br>
 
-            <div class="box " onclick="location.href='https://docs.google.com/forms/d/e/1FAIpQLSddfcUa43gB-k4XjpwFVotdnirQJL8UpPvfq9f4h-SBhjwqFg/viewform?usp=sf_link';">
-                <img src="image/bliardo.jpg " alt=" ">
+            </div>
+
+            <div class="box">
+                <img src="image/bliardo.jpg " alt="">
                 <h1>Billiard Boom</Area>
                 </h1>
                 <p>60 EL for a group per hour</p><br>
 
             </div>
         </div>
+
+
         <br>
-        <div class="conatiner " onclick="window.open( 'https://docs.google.com/forms/d/e/1FAIpQLSddfcUa43gB-k4XjpwFVotdnirQJL8UpPvfq9f4h-SBhjwqFg/viewform?usp=sf_link');">
-            <div class="box ">
-                <img src="image/Study rooms.jpg " alt=" ">
+        <div class="conatiner" onclick="window.open( 'https://docs.google.com/forms/d/e/1FAIpQLSddfcUa43gB-k4XjpwFVotdnirQJL8UpPvfq9f4h-SBhjwqFg/viewform?usp=sf_link');">
+            <div class="box">
+                <img src="image/Study rooms.jpg " alt="">
                 <h1>Rooms for Study</h1>
                 <p>10 EL for one person per hour</p><br>
 
             </div>
 
 
-            <div class="box ">
-                <img src="image/qahwa baladi.jpg " alt=" ">
+            <div class="box">
+                <img src="image/qahwa baladi.jpg" alt="">
                 <h1>Qahwa Baladi</Area>
                 </h1>
                 <p>payment for your orders</p><br>
 
             </div>
-            <div class="box ">
-                <img src="image/kidsArea.jpg " alt=" ">
+            <div class="box">
+                <img src="image/kidsArea.jpg" alt="">
                 <h1>Kids Area</Area>
                 </h1>
                 <p>10 EL for a child per hour</p><br>
 
             </div>
         </div>
-    </div>
+        <br><br>
+        <div class="conatiner" onclick="window.open( 'https://docs.google.com/forms/d/e/1FAIpQLSddfcUa43gB-k4XjpwFVotdnirQJL8UpPvfq9f4h-SBhjwqFg/viewform?usp=sf_link');">
+
+            <div class="box">
+                <img src="image/user.png" alt="">
+                <h1>A3da Arabi</Area>
+                </h1>
+                <p>payment for your orders</p><br>
+
+            </div>
+            <div class="box">
+                <img src="image/hall1.jpg" alt="">
+                <h1>Hall</Area>
+                </h1>
+                <p>10 EL for a person per hour</p><br>
+
+            </div>
+            <div class="box">
+                <img src="image/hall2.jpg" alt="">
+                <h1>Hall</Area>
+                </h1>
+                <p>10 EL for a person per hour</p><br>
+
+            </div>
+
+        </div>
+
 </body>
 
 </html>
